# econx

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  release-testpypi.yml
econx/: __init__.py  api.py
pyjha-m1-io-spec/: .gitignore  README.md  noxfile.py  pyproject.toml
pyjha-m1-io-spec/.github/workflows/: ci.yml
pyjha-m1-io-spec/src/pyjha/: __init__.py  api.py  io.py
pyjha-m1-io-spec/src/pyjha/model/: __init__.py  ols.py
pyjha-m1-io-spec/src/pyjha/models/: __init__.py  ols.py
pyjha-m1-io-spec/src/pyjha/spec/: __init__.py  design.py  parser.py
pyjha-m1-io-spec/tests/: test_design_model_api.py  test_io_and_spec.py
tests/: test_imports.py
