[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "econx"
version = "0.1.0a0"
description = "Stata-like econometrics interface for time series and panel data (wrapping statsmodels & linearmodels)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "you@example.com"}]
keywords = ["econometrics", "panel data", "time series", "stata", "economics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "statsmodels>=0.14",
  "linearmodels>=5.0",
  "formulaic>=1.0",
]

[project.optional-dependencies]
gmm = [
  "pydynpd>=0.6.0",
  "arch>=6.3.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "black>=24.0.0",
  "mypy>=1.10.0",
  "nox>=2024.4.15",
  "pre-commit>=3.7.0",
  "build>=1.2.1",
  "twine>=5.1.0",
]

[project.urls]
Homepage = "https://github.com/peeyush2212/econx"
Issues = "https://github.com/peeyush2212/econx/issues"

[tool.hatch.build]
packages = ["econx"]

[tool.ruff]
line-length = 100
select = ["E","F","I","W","N","UP","B"]
ignore = ["E501"]  # black handles formatting
exclude = ["dist","build",".nox",".venv"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = false
warn_return_any = false
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
